--- a/src/components/list/chatList/chatList.css
+++ b/src/components/list/chatList/chatList.css
@@ -70,3 +70,15 @@
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
+.item.active {
+  border-left: 3px solid #5183fe;
+}
+
+.chatList .search .add:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.item:hover {
+  background-color: rgba(81, 131, 254, 0.1);
+}
